Add phases panel

--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
         <button id="reverse" title="Reverse the animation" type="button" class="btn btn-info bi-arrow-left-right"></button>
         <input id="range" type="range" class="form-range" min="0" max="5" step="1">
         <canvas id="canvas"></canvas>
+        <div class="card">
+          <div class="card-header">
+            Phases
+          </div>
+          <ul id="phases" class="list-group list-group-flush">
+            <!-- <li class="list-group-item">An item</li>
+            <li class="list-group-item">A second item</li>
+            <li class="list-group-item">A third item</li> -->
+          </ul>
+        
+        </div>
       </div>
     </div>
   </div>
